feat: use disk as the skill storage
